
2012-11-24 László Németh:
    * zero turtle width in hideturtle mode to draw at the left border of the page

2012-11-06 László Németh:
    * uppercase/translation icon:
    - expands and uppercase Logo commands (fd -> FORWARD)
    - translation between supported languages (commands, decimal sign, for/in order)
    * new icon for clear screen
    * add English manual (see LibreLogo/Logo/Turtle graphics in Help)

2012-10-25 László Németh:
    * fix positioning to the faulty program line
    * program cache depends from the (modified) language of the document, too

2012-10-21 László Németh:
    * speed up command line
    * add multiline tooltip to the command line (it works well from LibO 3.6.2)
    * random color constants: ~color, eg. '~orange', '~green' etc.
    * handle modulo operator
    * ask before the compilation of long documents (avoid freezings)
    * add compilation cache to the multiline programs
    * better help window caption in the command line

2012-06-27 László Németh:
    * fix __string__ (use localized decimal sign)
    * fix repcount in loops with inner picture block
    * handle reopened documents
    * modified argument list of custom dashed penstyle
    * fix warning messages at maximum recursion depth and memory
    * add hatching styles (fillstyle num or
      fillstyle [line count(max 3), color, distance, degree]
    * add localized set(), range(), sorted() 
    * fix turtle selection at program start
    * modified turtle colors
    * fix showturtle
    * fix LineStyle_SOLID and LineStyle_DASHED
    * add repcount to the infinite loop
    * add logical expression and better list support to the simple LibreLogo expression parser
    * add string size limit for Print()
    * support "pic" without block: new shape
    * use localized __string__ for STR instead of str
    * add min, max, and regex functions: sub, search, findall
    * fix double round in localizations