@@ -1,3 +1,7 @@
+2012-12-17 László Németh:
+    * handle possible translation problems (strip terminating bars)
+    * keep double compilation of the commands
+    * trace loading problems (with PYUNO_LOGLEVEL environmental variable)
 
 2012-11-24 László Németh:
     * zero turtle width in hideturtle mode to draw at the left border of the page
